[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/views/components/pattern/drum.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/icons/baseline_power_settings_new_white_18dp.png" type="Texture" id=2]
[ext_resource path="res://ui/views/components/pattern_layout/pattern_layout.gd" type="Script" id=3]
[ext_resource path="res://ui/icons/baseline_power_white_18dp.png" type="Texture" id=4]
[ext_resource path="res://ui/icons/baseline_keyboard_arrow_left_white_18dp.png" type="Texture" id=5]
[ext_resource path="res://ui/icons/baseline_keyboard_arrow_right_white_18dp.png" type="Texture" id=6]

[node name="DrumLayout" type="VBoxContainer"]
margin_right = 1019.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
height = 1
instrument_dir = "res://assets/sounds"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1064.0
margin_bottom = 26.0

[node name="InstrumentLayout" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 280.0
margin_bottom = 26.0
rect_min_size = Vector2( 280, 0 )

[node name="InstrumentChoice" type="HBoxContainer" parent="HBoxContainer/InstrumentLayout"]
margin_right = 280.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Active" type="Button" parent="HBoxContainer/InstrumentLayout/InstrumentChoice"]
margin_right = 30.0
margin_bottom = 26.0
toggle_mode = true
icon = ExtResource( 4 )

[node name="InstrumentOption" type="OptionButton" parent="HBoxContainer/InstrumentLayout/InstrumentChoice"]
margin_left = 34.0
margin_right = 124.0
margin_bottom = 26.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 0
clip_text = true

[node name="EffectChoice" type="HBoxContainer" parent="HBoxContainer/InstrumentLayout"]
visible = false
margin_left = 142.0
margin_top = 83.0
margin_right = 280.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Button" type="Button" parent="HBoxContainer/InstrumentLayout/EffectChoice"]
margin_right = 30.0
margin_bottom = 26.0
toggle_mode = true
icon = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/InstrumentLayout/EffectChoice"]
margin_left = 34.0
margin_right = 94.0
margin_bottom = 26.0
caret_blink = true
caret_blink_speed = 0.5

[node name="RythmChoice" type="HBoxContainer" parent="HBoxContainer/InstrumentLayout"]
visible = false
margin_left = 226.0
margin_top = 83.0
margin_right = 363.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Prev" type="Button" parent="HBoxContainer/InstrumentLayout/RythmChoice"]
margin_right = 30.0
margin_bottom = 26.0
icon = ExtResource( 5 )

[node name="RythmPreset" type="OptionButton" parent="HBoxContainer/InstrumentLayout/RythmChoice"]
margin_left = 34.0
margin_right = 103.0
margin_bottom = 26.0
text = "Preset"

[node name="Next" type="Button" parent="HBoxContainer/InstrumentLayout/RythmChoice"]
margin_left = 107.0
margin_right = 137.0
margin_bottom = 26.0
icon = ExtResource( 6 )

[node name="PatternList" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 284.0
margin_top = 7.0
margin_right = 1064.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="pattern1" parent="HBoxContainer/PatternList" instance=ExtResource( 1 )]

[node name="pattern2" parent="HBoxContainer/PatternList" instance=ExtResource( 1 )]
margin_left = 196.0
margin_right = 388.0
pattern_indice = 1

[node name="pattern3" parent="HBoxContainer/PatternList" instance=ExtResource( 1 )]
margin_left = 392.0
margin_right = 584.0
pattern_indice = 2

[node name="pattern4" parent="HBoxContainer/PatternList" instance=ExtResource( 1 )]
margin_left = 588.0
margin_right = 780.0
pattern_indice = 3

[connection signal="item_selected" from="HBoxContainer/InstrumentLayout/InstrumentChoice/InstrumentOption" to="." method="_on_InstrumentOption_item_selected"]
[connection signal="item_selected" from="HBoxContainer/InstrumentLayout/RythmChoice/RythmPreset" to="." method="_on_RythmPreset_item_selected"]
